--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jinyonghwa/pager",
+  "name": "node-jyh-pager",
   "version": "1.0.0",
   "description": "node.js pagination ",
   "main": "index.js",
